syntax = "proto3";

package private_school;
option go_package = "private_school.v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ResponsiblePersonService {
  rpc CreateResponsiblePerson(CreateResponsiblePersonRequest) returns (ResponsiblePersonResponse);
  rpc GetResponsiblePerson(GetResponsiblePersonRequest) returns (ResponsiblePersonResponse);
  rpc UpdateResponsiblePerson(UpdateResponsiblePersonRequest) returns (ResponsiblePersonResponse);
  rpc DeleteResponsiblePerson(DeleteResponsiblePersonRequest) returns (google.protobuf.Empty);
  rpc ListResponsiblePersons(ListResponsiblePersonsRequest) returns (ListResponsiblePersonsResponse);
}

message ResponsiblePersonResponse {
  string id = 1;
  string client_id = 2;
  string student_id = 3;
  string full_name = 4;
  optional string phone = 5;
  optional string email = 6;
  string relationship_type = 7;
  bool is_primary = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  optional google.protobuf.Timestamp deleted_at = 11;
}

message CreateResponsiblePersonRequest {
  string client_id = 1;
  string student_id = 2;
  string full_name = 3;
  string relationship_type = 4;
  optional string phone = 5;
  optional string email = 6;
  optional bool is_primary = 7;
}

message GetResponsiblePersonRequest {
  string id = 1;
  string client_id = 2;
}

message DeleteResponsiblePersonRequest {
  string id = 1;
  string client_id = 2;
}

message UpdateResponsiblePersonRequest {
  string id = 1;
  string client_id = 2;
  optional string full_name = 3;
  optional string phone = 4;
  optional string email = 5;
  optional string relationship_type = 6;
  optional bool is_primary = 7;
}

message ListResponsiblePersonsRequest {
  string client_id = 1;
  string student_id = 2;
  optional bool primary_only = 3;
  optional int32 count = 4;
  optional int64 cursor = 5;
}

message ListResponsiblePersonsResponse {
  repeated ResponsiblePersonResponse responsible_persons = 1;
  optional int64 next_cursor = 2;
}